@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/08/25 18:51:08 minskim Exp $
+$NetBSD: distinfo,v 1.3 2004/09/12 06:04:45 minskim Exp $
 
-SHA1 (hre-0.9.8.tar.gz) = 99d602cec2aa18e17fce0f1ce261fab6e8d87b3c
-Size (hre-0.9.8.tar.gz) = 369588 bytes
+SHA1 (hre-0.9.8a.tar.gz) = 9082ec1553052483340ec15648204738ecab1e41
+Size (hre-0.9.8a.tar.gz) = 369257 bytes
